# massipipe

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
config_ref/: index.html
docs/: api.md  config_ref.md  example_usage.md  georeferencing_ref.md  index.md  irradiance_ref.md  mosaic_ref.md  orthorectification.md  pipeline_ref.md  processors_ref.md  quicklook_ref.md  radiance_ref.md  reflectance_ref.md  utils_ref.md
example_usage/: index.html
georeferencing_ref/: index.html
irradiance_ref/: index.html
massipipe/: __init__.py  config.py  export.py  georeferencing.py  glint.py  irradiance.py  license.py  mosaic.py  orthorectification.py  pipeline.py  processors.py  quicklook.py  radiance.py  readme.py  reflectance.py  utils.py
mosaic_ref/: index.html
notebooks/develop_tests/: dev_processor_tests.ipynb
notebooks/modify_datasets/distribute_yaml_config_hsi/: config.seabee.yaml  demo_read_write_yaml.ipynb  distribute_yaml_config_hsi.ipynb
notebooks/runners/: nird_pipeline_runner.ipynb
notes/: example_rasterio_orthorect_chatgpt.py  orthorectification_implementation_plan.md
pipeline_ref/: index.html
processors_ref/: index.html
quicklook_ref/: index.html
radiance_ref/: index.html
reflectance_ref/: index.html
tests/: conftest.py  dev_processor_tests.ipynb  test_orthorect.py  test_pipeline.py  test_processors.py  test_utils.py
tests/example_data/: example_config.yaml  example_data_description.md
utils_ref/: index.html
