[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "massipipe"
version = "0.1.0"
dependencies = [
  "ipykernel",
  "matplotlib",
  "numpy",
  "pyproj",
  "pyyaml",
  "rasterio",
  "spectral",
  "scipy",
  "schema"
]
requires-python = ">=3.8"
authors = [
  {name = "Martin H. Skjelvareid"},
]
maintainers = [
  {name = "Martin H. Skjelvareid"}
]
description = "PIpeline and library for processing hyperspectral images acquired with a Resonon Pika L imager. The pipeline was developed as part of the MASSIMAL project; Mapping of Algae and Seagrass using Spectral Imaging and MAchine Learning."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["hyperspectral", "uav", "radiance","irradiance","sun glint", "sky glint", "georeference", "ENVI", "GeoTIFF", "Resonon", "Pika L"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "pytest",
  "ruff",
  "numpydoc-linter",
  "mkdocs",
  "mkdocstrings-python",
  "mkdocs-material"
]

[project.urls]
Repository = "https://github.com/mh-skjelvareid/massipipe"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
