[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "massipipe"
version = "0.3.0"
dependencies = [
  "ipykernel",
  "matplotlib",
  "numpy",
  "pyproj",
  "pyyaml",
  "rasterio",
  "rich",
  "spectral",
  "scipy",
  "pydantic"
]
requires-python = ">=3.9"
authors = [
  {name = "Martin H. Skjelvareid"},
]
maintainers = [
  {name = "Martin H. Skjelvareid"}
]
description = "PIpeline and library for processing hyperspectral images acquired with a Resonon Pika L imager. The pipeline was developed as part of the MASSIMAL project; Mapping of Algae and Seagrass using Spectral Imaging and MAchine Learning."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["hyperspectral", "uav", "radiance","irradiance","sun glint", "sky glint", "georeference", "ENVI", "GeoTIFF", "Resonon", "Pika L"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Oceanography",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "pytest",
  "ruff",
  "numpydoc-linter",
  "mkdocs",
  "mkdocstrings-python",
  "mkdocs-material"
]

[project.urls]
repository = "https://github.com/mh-skjelvareid/massipipe"
documentation = "https://mh-skjelvareid.github.io/massipipe/"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
